--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,32 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
+
+body {
+
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
+.background-grayy{
+  background: #E9E9E9;
+}
+.text-orangee{
+  color:#F53E32
+}
+.text-color-gray{
+  color:#7A7A7A
 }
 
 body,
@@ -16,6 +38,7 @@ button,
 input {
   font-family: "Poppins", sans-serif;
 }
+
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
@@ -61,4 +84,14 @@ input {
   font-style: normal;
   font-weight: 400;
   line-height: 24px;
+}
+
+.background-grayy{
+  background: #E9E9E9;
+}
+.text-orangee{
+  color:#F53E32
+}
+.text-color-gray{
+  color:#7A7A7A
 }
